# sqlite_bench

./: CMakeLists.txt  README.md  main.cpp
app/: main.cpp
app/include/: benchmark.hpp  benchmarkSenOne.hpp  benchmarkSenTwo.hpp
app/src/: benchmarkSenOne.cpp  benchmarkSenTwo.cpp
include/: benchmark.hpp  benchmarkSenOne.hpp  benchmarkSenTwo.hpp
scripts/: measure.sh
src/: benchmarkSenOne.cpp  benchmarkSenTwo.cpp
